# bwcodec

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bwcodec.cpp  structs.h
src/: CMakeLists.txt  InterFrameCoder.cpp  ProgressBar.cpp  ProgressBar.h  VideoByteCoding.cppm  VideoCoder.cpp  VideoCoder.h  main.cpp
src/lib/: CMakeLists.txt  ProgressBar.cpp  fileoperations.cpp  fileoperations.hpp  structs.h  videobyteconversions.cpp  videobyteconversions.hpp
